added fps counter, temporarily disabled custom fps

--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -9,6 +9,8 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 1em;
+  white-space: pre;
+  font-family: monospace;
 }
 
 .container {
