--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -36,6 +36,12 @@ body {
   font-size: 1.5em;
 }
 
+button {
+  width: fit-content;
+  margin-top: 1em;
+  font-size: 1.5em;
+}
+
 #reset {
   margin-left: 1em;
   width: fit-content;
